neural_engine/.metadata/.plugins/org.eclipse.cdt.ui/neural_engine.build.log
15:18:02 **** Incremental Build of configuration Debug for project neural_engine ****
make all 
Building file: ../src/entorhinal_cortex.cpp
Invoking: GCC C++ Compiler
g++ -D__GXX_EXPERIMENTAL_CXX0X__ -I/usr/include/opencv -I/usr/include/plplot -I/usr/include/python2.7 -I/CompNeuro/Software/General/maze_runner/blank_extra -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -MMD -MP -MF"src/entorhinal_cortex.d" -MT"src/entorhinal_cortex.o" -o "src/entorhinal_cortex.o" "../src/entorhinal_cortex.cpp"
In file included from ../src/entorhinal_cortex.cpp:1:0:
../src/entorhinal_cortex.h:51:120: error: expected ‘;’ at end of member declaration
   double distance(entorhinal_cortex::grid_cells ***grid_cell_populations, int i, int i2, int j, int j2, string syn_type)
                                                                                                                        ^
../src/entorhinal_cortex.h:52:119: error: expected ‘;’ at end of member declaration
   double synapse(entorhinal_cortex::grid_cells ***grid_cell_populations, int i, int i2, int j, int j2, string syn_type)
                                                                                                                       ^
In file included from ../src/entorhinal_cortex.cpp:3:0:
../src/matplotlibcpp.h: In constructor ‘matplotlibcpp::detail::_interpreter::_interpreter()’:
../src/matplotlibcpp.h:95:67: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
      PyObject_CallMethod(matplotlib, "use", "s", s_backend.c_str());
                                                                   ^
../src/matplotlibcpp.h:95:67: warning: ISO C++ forbids converting a string constant to ‘char*’ [-Wwrite-strings]
../src/entorhinal_cortex.cpp: In static member function ‘static void entorhinal_cortex::sys(const state_type&, entorhinal_cortex::state_type&, double)’:
../src/entorhinal_cortex.cpp:45:9: warning: unused variable ‘W’ [-Wunused-variable]
  double W = 10.0;
         ^
../src/entorhinal_cortex.cpp:46:9: warning: unused variable ‘Z’ [-Wunused-variable]
  double Z = 0.02;
         ^
../src/entorhinal_cortex.cpp: In member function ‘void entorhinal_cortex::time_step()’:
../src/entorhinal_cortex.cpp:168:29: error: invalid operands of types ‘int’ and ‘double’ to binary ‘operator%’
  if (GRID_POPULATION_SIZE % sqrt_cols > .2)
                             ^
../src/entorhinal_cortex.cpp:182:32: error: invalid types ‘entorhinal_cortex::grid_cells***[double]’ for array subscript
    Vm = grid_cell_populations[i][j]->V;
                                ^
../src/entorhinal_cortex.cpp:187:27: error: invalid types ‘entorhinal_cortex::grid_cells***[double]’ for array subscript
    grid_cell_populations[i][j]->V = Vm;
                           ^
../src/entorhinal_cortex.cpp:163:27: warning: unused variable ‘Cm_inh’ [-Wunused-variable]
  double Cm_exc = 211.389, Cm_inh = 227.3;
                           ^
../src/entorhinal_cortex.cpp: In member function ‘double entorhinal_cortex::distance(entorhinal_cortex::grid_cells***, int, int, int, int, std::__cxx11::string)’:
../src/entorhinal_cortex.cpp:207:21: error: could not convert ‘syn_type.std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=<char, std::char_traits<char>, std::allocator<char> >(((const char*)"ie"))’ from ‘std::__cxx11::basic_string<char>’ to ‘bool’
  if (syn_type = "ie") {C = 0.0; e_i_p = 0.0;}
                     ^
src/subdir.mk:33: recipe for target 'src/entorhinal_cortex.o' failed
make: *** [src/entorhinal_cortex.o] Error 1

15:18:15 Build Finished (took 12s.863ms)

